--- a/content/posts/דניאל-פרץ-נמכר-למועדון-הפאר-הגרמני-באיירן-מינכן-תמורת-יותר-מ־5-מיליון-יורו.md
+++ b/content/posts/דניאל-פרץ-נמכר-למועדון-הפאר-הגרמני-באיירן-מינכן-תמורת-יותר-מ־5-מיליון-יורו.md
@@ -1,6 +1,6 @@
 ---
 title: "דניאל פרץ, נמכר למועדון הפאר הגרמני באיירן מינכן תמורת יותר מ־5 מיליון יורו "
-date: 04-06-2025 12:15
+date: 
 author: עמיר אייל
 categories:
   - בדיקה
