Update פוסטים “לנהל-את-הכעס-המפתח-לחיים-רגועים-ומאוזנים”

--- a/content/posts/לנהל-את-הכעס-המפתח-לחיים-רגועים-ומאוזנים.md
+++ b/content/posts/לנהל-את-הכעס-המפתח-לחיים-רגועים-ומאוזנים.md
@@ -1,6 +1,6 @@
 ---
 title: "לנהל את הכעס: המפתח לחיים רגועים ומאוזנים"
-date: 04-06-2025 12:53
+date: 2025-06-04
 author: עמיר אייל
 categories:
   - טיפול רגשי
