--- a/content/blog/חרדה חברתית.md
+++ b/content/blog/חרדה חברתית.md
@@ -1,5 +1,5 @@
 ---
-title: " מהי פוביה ספציפית וכיצד מטפלים?"
+title: "מהי חרדה חברתית ואיך מטפלים?"
 date: 2025-05-07
 author: עמיר אייל
 categories:
